Add working input handler

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <p class="container">Hello</p>
+    <input placeholder="Pixel count">
+    <button>Submit</button>
+    
+    <p class="container"></p>
 
     <script src="script.js"></script>
 </body>
