Initialize working hover functionality

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <input placeholder="Pixel count">
+    <input placeholder="Pixel count (ex. 1000)">
     <button>Submit</button>
-    
+
     <p class="container"></p>
 
     <script src="script.js"></script>
