Improve canvas display handling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <input placeholder="Pixel count (ex. 1000)">
     <button>Submit</button>
 
-    <p class="container"></p>
+    <div class="wrapper">
+        <div class="container"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
