--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <input placeholder="Pixel count (ex. 1000)">
+    <input placeholder="Pixel count (max 100)">
     <button>Submit</button>
 
     <div class="container"></div>
