Initialize functioning display and input handler

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <input placeholder="Pixel count (max 100)">
-    <button>Submit</button>
-
-    <div class="container"></div>
+    <div class="wrapper">
+        <button class="grid-btn">New Grid</button>
+        <div class="container"></div>   
+    </div>
 
     <script src="script.js"></script>
 </body>
