Initialize HTML template

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <div class="wrapper">
-        <button class="grid-btn">New Grid</button>
-        <div class="container"></div>   
+        <div class="nav">
+            <h1>Etch-A-Sketch</h1>
+        </div>
+        <div class="main">
+            <input placeholder="Grid">
+            <div class="container"></div>
+        </div>
+        <div class="footer">
+            <p>Copyright &copy; 2026 LowkeySpy</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
