Add switch pen colors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <h1>Etch-A-Sketch</h1>
         </div>
         <div class="main">
-            <input placeholder="Grid">
+            <div class="header">
+                <input placeholder="Grid">
+                <button class="black">Black</button>
+                <button class="rainbow">Rainbow</button>
+            </div>
             <div class="container"></div>
         </div>
         <div class="footer">
